# HW_31

./: db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml
HW_27/: settings.py  urls.py
ads/: models.py  permissions.py  serializers.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_description.py  0002_initial.py
ads/urls/: ad.py  category.py
ads/views/: ad.py  category.py
data/: category.json  cvs_to_data.py  location.json  user.json
selection/: admin.py  models.py  permissions.py  selection_create_test.py  serializers.py  urls.py
selection/migrations/: 0001_initial.py  0002_initial.py
tests/: factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_detail_test.py  ad_list_test.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
